# LocalConnection

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/ConsoleReader/: CMakeLists.txt  ConsoleReader.cpp  ConsoleReader.h
example/client/: CMakeLists.txt  main.cpp
example/server/: CMakeLists.txt  main.cpp
localconnection/: CMakeLists.txt  localconnection.h  localserver.cpp  localsocket.cpp
